<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_choose_a_new_poster"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:gravity="center" />

        <TextView
            android:id="@+id/choose_poster_from_gallery_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_add_poster_from_gallery"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:paddingVertical="@dimen/_4sdp"
            android:paddingHorizontal="@dimen/_8sdp"
            android:clickable="true"
            android:focusable="true"
            android:drawablePadding="@dimen/_8sdp"
            app:drawableStartCompat="@drawable/ic_gallery"
            app:drawableTint="@color/white"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"/>

        <ProgressBar
            android:id="@+id/choose_poster_loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/app_color"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/choose_poster_rv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_400sdp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            android:orientation="vertical" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/choose_poster_cancel_btn"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_semibold" />

    </LinearLayout>
</layout>
