<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        tools:context=".presentation.settings.BackupFragment">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:background="@drawable/gradient_bottom"
            app:layout_constraintBottom_toBottomOf="parent" />

        <RelativeLayout
            android:id="@+id/backup_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_top"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_12sdp"
                android:src="@drawable/ic_back"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_toEndOf="@id/btn_back"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/backup_restore"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backup_toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_100sdp">

                <!-- Export Card -->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btn_export"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:layout_marginVertical="@dimen/_8sdp"
                    app:cardBackgroundColor="@color/gray_shade_1"
                    app:cardCornerRadius="@dimen/_12sdp"
                    app:cardElevation="0dp"
                    app:strokeColor="@color/white"
                    app:strokeWidth="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/_16sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_semibold"
                            android:text="@string/export_library"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14ssp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/export_desc"
                            android:textColor="@color/text_secondary"
                            android:textSize="@dimen/_10ssp" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <!-- Import Card -->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btn_import"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:layout_marginVertical="@dimen/_8sdp"
                    app:cardBackgroundColor="@color/gray_shade_1"
                    app:cardCornerRadius="@dimen/_12sdp"
                    app:cardElevation="0dp"
                    app:strokeColor="@color/white"
                    app:strokeWidth="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/_16sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_semibold"
                            android:text="@string/import_library"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14ssp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/import_desc"
                            android:textColor="@color/text_secondary"
                            android:textSize="@dimen/_10ssp" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>