<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/black"
    android:paddingTop="@dimen/_8sdp"
    android:paddingBottom="@dimen/_20sdp">

    <!-- Drag Handle -->
    <View
        android:layout_width="@dimen/_32sdp"
        android:layout_height="@dimen/_4sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@color/text_secondary"
        android:alpha="0.5" />

    <TextView
        android:id="@+id/quick_actions_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingBottom="@dimen/_12sdp"
        tools:text="Movie Title" />

    <!-- Share Item -->
    <LinearLayout
        android:id="@+id/quick_action_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_12sdp"
        android:paddingHorizontal="@dimen/_16sdp"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/baseline_share_24"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:text="@string/share"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <!-- Change Poster Item -->
    <LinearLayout
        android:id="@+id/quick_action_change_poster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_12sdp"
        android:paddingHorizontal="@dimen/_16sdp"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_gallery"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/quick_action_change_poster_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:text="@string/btn_change_movie_poster"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <!-- Remove Item -->
    <LinearLayout
        android:id="@+id/quick_action_remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_12sdp"
        android:paddingHorizontal="@dimen/_16sdp"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/quick_action_remove_icon"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/baseline_delete_24"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/quick_action_remove_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            tools:text="@string/btn_remove_from_favorites"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <!-- Add to Collection Item -->
    <LinearLayout
        android:id="@+id/quick_action_collection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_12sdp"
        android:paddingHorizontal="@dimen/_16sdp"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/baseline_add_circle_24"
            app:tint="@color/white" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_16sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_collection"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_to_custom_list"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_2sdp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
